Simplify the download process for MCP